# neurostack

./: README.md  env.template  pyproject.toml
examples/: test_gcp_setup.py
examples/agents/: simple_agent_example.py
examples/agents/conversion_agent/: README.md  __init__.py  agents.py  main.py  models.py  requirements.txt  utils.py
src/neurostack/: __init__.py
src/neurostack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/neurostack/core/: __init__.py
src/neurostack/core/agents/: __init__.py  base.py  orchestrator.py
src/neurostack/core/connectors/: __init__.py
src/neurostack/core/connectors/cloudstorage/: __init__.py  azure_blob.py  base.py  dropbox.py  gcs.py  google_drive.py  s3.py
src/neurostack/core/connectors/database/: __init__.py  base.py  mongodb.py  mysql.py  postgresql.py  redis.py
src/neurostack/core/connectors/filesystems/: __init__.py  base.py  network_filesystem.py
src/neurostack/core/memory/: __init__.py  long_term.py  manager.py  vector.py  working.py
src/neurostack/core/protocols/: __init__.py  a2a.py  mcp.py
src/neurostack/core/reasoning/: __init__.py  engine.py
src/neurostack/core/tools/: __init__.py  base.py
